replaced embedded redis with embedded mongodb

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,8 @@ server:
 
 spring:
   data:
-    redis:
-      host: 127.0.0.1
-      port: 6379
+    mongodb:
+      uri: mongodb://localhost:27017/reactive_spring_rest_jwt
 
 app:
   jwt:
