enabled mongodb auto index creation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:37017/reactive_spring_rest_jwt
+      auto-index-creation: true
 
 app:
   jwt:
